--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "firebase/php-jwt": "6.3.0.0",
         "mpdf/mpdf": "8.1.5.0",
         "monolog/monolog": "^3.3",
-        "microsoft/azure-storage-blob": "*"
+        "microsoft/azure-storage-blob": "*",
+        "owasp/csrf-protector-php": "dev-master"
     }
 }
