--- a/composer.json
+++ b/composer.json
@@ -4,12 +4,13 @@
     "description": "Foqus 8",
     "require": {
         "php": "^8.1",
-        "sendgrid/sendgrid": "8.0.1.0",
-        "phpoffice/phpspreadsheet": "1.25.0.0",
+        "sendgrid/sendgrid": "^8.0",
+        "phpoffice/phpspreadsheet": "^1.28",
         "firebase/php-jwt": "6.3.0.0",
         "mpdf/mpdf": "8.1.5.0",
         "monolog/monolog": "^3.3",
         "microsoft/azure-storage-blob": "*",
-        "owasp/csrf-protector-php": "dev-master"
+        "owasp/csrf-protector-php": "dev-master",
+        "composer/ca-bundle": "^1.3"
     }
 }
